[package]
name = "kvs"
version = "0.1.0"
authors = ["God"]
description = "A key-value store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4.0", features = ["derive"] }
serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
tempfile = "3.3"
walkdir = "2.3"

[lib]
test = false

[[bin]]
name = "kvs"
test = false
