[package]
name = "kvs"
version = "0.1.0"
authors = ["God"]
description = "A key-value store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4.0.26", features = ["derive"] }
dashmap = "5.4.0"
log = "0.4.17"
rayon = "1.6.0"
serde = { version="1.0.147", features = ["derive"] }
serde_json = "1.0.88"
sled = "0.34.7"

[dev-dependencies]
assert_cmd = "2.0.6"
criterion = "0.4.0"
crossbeam-utils = "0.8.13"
panic-control = "0.1.4"
predicates = "2.1.3"
rand = { version = "0.8.5", features = ["small_rng"] }
tempfile = "3.3.0"
walkdir = "2.3.2"

[[bench]]
name = "engines"
harness = false

[[bench]]
name = "threadpools"
harness = false
